--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "element-plus": "^2.10.2",
     "pinia": "^3.0.3",
+    "turndown": "^7.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
