--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.13.1",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.10.2",
+    "marker": "^0.1.2",
     "pinia": "^3.0.3",
     "turndown": "^7.2.0",
     "vue": "^3.5.13",
