--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.10.2",
     "marker": "^0.1.2",
     "pinia": "^3.0.3",
