--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "element-plus": "^2.10.2",
+    "jwt-decode": "^4.0.0",
     "marker": "^0.1.2",
     "pinia": "^3.0.3",
     "turndown": "^7.2.0",
